--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -148,6 +148,9 @@ function search() {
     <div class="row justify-content-center">
       <h1 class="font-weight-normal mt-5 mb-5">
       <p class="caption"><%= @post.location %>
+      <p class="caption"><%= @post.latitude %>
+      <p class="caption"><%= @post.longitude %>
+
       </h1>
     </div>
     <% if @comment.errors.any? %>
