--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -35,7 +35,7 @@
   height: 100%;
   width: 100%;
   background-image: url(/assets/mypageedit.jpg);
-  background-image: image-url('assets/mypageedit.jpg'); 
+  background-image: image-url('mypageedit.jpg'); 
   background-color: rgba(255, 255, 255, 0.4);
   background-blend-mode: lighten;
   background-size: 100% 100%;
