--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,10 +68,10 @@ nav li.home {
 }
 
   @media screen and (max-width: 575px){
-    html,
-    body {
-      margin-bottom: 66px;
-    }
+    // html,
+    // body {
+    //   margin-bottom: 66px;
+    // }
 
     .top-nav {
       display: none;
