--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,22 +12,17 @@
       <%= link_to "プロフィール編集", edit_user_path(@user), class: "btn-sm btn-success" %>
       <% end %>
       <div id="relationship_btn_<%= @user.id %>">
-          <%= render "relationships/relationship", user: @user %>
+        <%= render "relationships/relationship", user: @user %>
       </div>
     </p>
     <div class="ml-3 mb-3 card">
-    <div class="d-flex align-items-center">
+    <div class="d-flex">
       <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "logo.png", class: "mb-3 profile-img" %>
       <h4 class="ml-3 mb-3"><%= @user.profile %></h4>
     </div>
-     <div class="d-flex">
-     <%= link_to follows_user_path(@user) do %>
-     <h6>フォロー<%= @following_users.count %></h6>
-     <% end %>&nbsp;&nbsp;
-     <%= link_to followers_user_path(@user) do %>
-     <h6>フォロワー<%= @follower_users.count %></h6>
-     <% end %>
-     </div>
+     <div class="d-flex" id="relationship_count">
+      <%= render "users/relationship_count", {user: @user, following_users: @following_users, follower_users: @follower_users} %>
+    </div>
     </div>
     <div class="row justify-content-center">
       <% @posts.each do |post| %>
