--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,15 +5,17 @@
     </div>
     <div class="row justify-content-center">
       <% @posts.each do |post| %>
-        <div class="one-post mt-3">
-          <%= link_to post_path(post) do %>
-            <p class="caption"><%= post.user.name %></p> 
+        <%= link_to post_path(post) do %>
+        <div class="one-post mt-3 card bg-light">
+            <p class="caption"><%= post.location %></p>
             <% post.post_images.first(1).each do |image| %>
             <%= attachment_image_tag image, :image, format: 'jpeg', size: '200x133' %>
             <% end %>
-            <p class="caption"><%= post.location %></p>
-            <p class="caption"><%= "#{post.favorites.count} いいね" %></p>
-            <p class="caption"><%= "#{post.comments.count} コメント" %></p>
+            <p class="caption"><%= post.user.name %></p> 
+            <div class="count">
+            <p class="caption"><%= "♥#{post.favorites.count}" %></p>
+            <p class="caption"><i class="fa-regular fa-comment"></i><%= "#{post.comments.count}" %></p>
+            </div>
           <% end %>
         </div>
       <% end %>
