--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,15 +26,19 @@
     </div>
     <div class="row justify-content-center">
       <% @posts.each do |post| %>
-      <div class="one-post">
         <%= link_to post_path(post) do %>
-          <% post.post_images.first(1).each do |image| %>
+        <div class="one-post mt-3 card">
+            <p class="caption"><%= post.location %></p>
+            <% post.post_images.first(1).each do |image| %>
             <%= attachment_image_tag image, :image, format: 'jpeg', size: '200x133' %>
+            <% end %>
+            <p class="caption "><%= post.user.name %></p> 
+            <div class="count">
+            <p class="caption"><%= "♥#{post.favorites.count}" %></p>
+            <p class="caption"><i class="fa-regular fa-comment"></i><%= "#{post.comments.count}" %></p>
+            </div>
           <% end %>
-        <p class="caption mb-0"><%= post.location %></p>
-        <p class="caption"><%= "#{post.comments.count} コメント" %></p>
-        <% end %>
-      </div>
+        </div>
       <% end %>
     </div>
     <%= paginate @posts, theme: 'twitter-bootstrap-4' %>
